--- a/WinUI.Extensions/Vanara.WinUI.Extensions.csproj
+++ b/WinUI.Extensions/Vanara.WinUI.Extensions.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
     <Description>Extension methods and conversions from Vanara P/Invoke types and methods to UWP and WinUI types and methods.</Description>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
@@ -16,6 +16,7 @@ SystemFoundationExtensions
 
 </PackageReleaseNotes>
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
+    <NoWarn>$(NoWarn);NU1510;</NoWarn>
   </PropertyGroup>
   <ItemGroup Condition=" $(NET40_OR_GREATER) ">
     <Reference Include="netstandard" />
@@ -27,5 +28,6 @@ SystemFoundationExtensions
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="System.Runtime.WindowsRuntime" />
+    <!--<PackageReference Include="Microsoft.Windows.SDK.Contracts" Condition="'$(TargetFramework)' == 'netcoreapp3.1'" />-->
   </ItemGroup>
 </Project>
