--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,8 @@
 <Project>
   <PropertyGroup>
-    <TargetFrameworks>net48;net5.0;net6.0;net7.0;net8.0-windows;net9.0-windows;net10.0-windows;netstandard2.0;netstandard2.1;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks Condition="'$(ExclSlnTargets)' != 'true'" >net48;net5.0;net6.0;net7.0;net8.0-windows;net9.0-windows;netstandard2.0;netstandard2.1;netcoreapp3.1</TargetFrameworks>
     <!-- Defined variable for projects that do not support .NET Standard -->
-    <TargetFrameworksNotStd>net48;net6.0;net7.0;net8.0-windows;net9.0-windows;net10.0-windows;netcoreapp3.1</TargetFrameworksNotStd>
+    <TargetFrameworksNotStd>net48;net6.0;net7.0;net8.0-windows;net9.0-windows;netcoreapp3.1</TargetFrameworksNotStd>
     <Configurations>Debug;Release</Configurations>
     <Platforms>AnyCPU</Platforms>
     <Version>4.3.0</Version>
