--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -14,19 +14,18 @@
     <NETSTANDARD2_1>false</NETSTANDARD2_1>
     <NETSTANDARD2_1 Condition="'$(TargetFramework)' == 'netstandard2.1'">true</NETSTANDARD2_1>
     <ACCESSCTRL_COND>false</ACCESSCTRL_COND>
-    <ACCESSCTRL_COND Condition="$(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('netcore')) Or $(TargetFramework.StartsWith('net5'))">true</ACCESSCTRL_COND>
+    <ACCESSCTRL_COND Condition="$(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('netcore'))">true</ACCESSCTRL_COND>
     <DRAWING_COMMON_COND>false</DRAWING_COMMON_COND>
-    <DRAWING_COMMON_COND Condition="$(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('net8')) Or $(TargetFramework.StartsWith('net9'))">true</DRAWING_COMMON_COND>
+    <DRAWING_COMMON_COND Condition="$(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('net8')) Or $(TargetFramework.StartsWith('net9')) Or $(TargetFramework.StartsWith('net10'))">true</DRAWING_COMMON_COND>
     <PRENET6>false</PRENET6>
     <PRENET6 Condition="'$(TargetFramework)' == 'netcoreapp3.1' Or '$(TargetFramework)' == 'net5.0'">true</PRENET6>
     <NET6OR7>false</NET6OR7>
     <NET6OR7 Condition="'$(TargetFramework)' == 'net6.0' Or '$(TargetFramework)' == 'net7.0'">true</NET6OR7>
     <NET8ORLATER>false</NET8ORLATER>
     <NET8ORLATER Condition="!$(PRENET6) And !$(NET6OR7)">true</NET8ORLATER>
-    
-    <CODEANALYSISVER>4.14.0</CODEANALYSISVER>
+    <CODEANALYSISVER>5.0.0</CODEANALYSISVER>
     <CODEANALYSISTESTVER>1.1.2</CODEANALYSISTESTVER>
-    <SYSVER>9.0.7</SYSVER>
+    <SYSVER>10.0.0</SYSVER>
   </PropertyGroup>
   <ItemGroup>
     <PackageVersion Include="CommunityToolkit.HighPerformance" Version="7.1.2" Condition=" '$(TargetFramework)' == 'net5.0' " />
@@ -34,9 +33,9 @@
     <PackageVersion Include="CommunityToolkit.HighPerformance" Version="8.3.2" Condition=" '$(TargetFramework)' != 'netcoreapp3.1' And '$(TargetFramework)' != 'net5.0' " />
     <PackageVersion Include="AutoFixture" Version="4.18.1" />
     <PackageVersion Include="dSPACE.Runtime.InteropServices" Version="1.10.0" />
-    <PackageVersion Include="ICSharpCode.Decompiler" Version="9.0.0.7889" />
+    <PackageVersion Include="ICSharpCode.Decompiler" Version="9.1.0.7988" />
     <PackageVersion Include="Microsoft.CodeAnalysis" Version="$(CODEANALYSISVER)" />
-    <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="$(CODEANALYSISVER)" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Common" Version="$(CODEANALYSISVER)" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="$(CODEANALYSISVER)" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing" Version="$(CODEANALYSISTESTVER)" />
@@ -45,11 +44,13 @@
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.SourceGenerators.Testing" Version="$(CODEANALYSISTESTVER)" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="$(CODEANALYSISVER)" />
     <PackageVersion Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.VisualBasic" Version="10.1.0" />
     <PackageVersion Include="Microsoft.VSSDK.BuildTools" Version="17.14.2120" />
     <PackageVersion Include="Microsoft.Win32.Registry" Version="5.0.0" />
-    <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageVersion Include="Microsoft.Windows.SDK.Contracts" Version="10.0.22621.3233" />
+    <PackageVersion Include="Newtonsoft.Json" Version="13.0.4" />
     <PackageVersion Include="NUnit" Version="4.4.0" />
     <PackageVersion Include="NUnit.DeepObjectCompare" Version="2.0.1" />
     <PackageVersion Include="NUnit3TestAdapter" Version="5.2.0" />
@@ -67,7 +68,8 @@
     <PackageVersion Include="System.Management" Version="6.0.2" Condition=" $(PRENET6) " />
     <PackageVersion Include="System.Management" Version="8.0.0" Condition=" $(NET6OR7) " />
     <PackageVersion Include="System.Management" Version="$(SYSVER)" Condition=" $(NET8ORLATER) " />
-    <PackageVersion Include="System.Memory" Version="4.5.5" />
+    <PackageVersion Include="System.Memory" Version="4.6.3" />
+    <PackageVersion Include="System.Reflection.Metadata" Version="$(SYSVER)" />
     <PackageVersion Include="System.Runtime.CompilerServices.Unsafe" Version="6.1.2" Condition=" $(NETSTANDARD2_1) " />
     <PackageVersion Include="System.Runtime.WindowsRuntime" Version="4.7.0" />
     <PackageVersion Include="System.Security.AccessControl" Version="6.0.1" />
