--- a/PInvoke/WindowsDriverFramework/Vanara.PInvoke.WindowsDriverFramework.csproj
+++ b/PInvoke/WindowsDriverFramework/Vanara.PInvoke.WindowsDriverFramework.csproj
@@ -12,7 +12,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-FxFrameworkEntryUm Microsoft_WDF_UMDF_Version WdfDeviceCreate
+WdfDeviceCreate
 
 Structures
 PWDFDEVICE_INIT WDFCHILDLIST WDFCMRESLIST WDFCOLLECTION WDFCOMMONBUFFER WDFCOMPANIONTARGET WDFCONTEXT WDFDEVICE WDFDMAENABLER WDFDMATRANSACTION WDFDPC WDFDRIVER WDFFILEOBJECT WDFINTERRUPT WDFIORESLIST WDFIORESREQLIST WDFIOTARGET WDFKEY WDFLOOKASIDE WDFMEMORY WDFOBJECT WDFQUEUE WDFREQUEST WDFSPINLOCK WDFSTRING WDFTIMER WDFUSBDEVICE WDFUSBINTERFACE WDFUSBPIPE WDFWAITLOCK WDFWMIINSTANCE WDFWMIPROVIDER WDFWORKITEM WDF_OBJECT_ATTRIBUTES WDF_OBJECT_CONTEXT_TYPE_INFO
