Finished consolidating of Shared into Core by removing errant code and project references. Also had to move VssApi back to v143 build as v145 doesn't compile yet.

--- a/CodeGen/Analyzer/Vanara.CodeGen.Analyzer.csproj
+++ b/CodeGen/Analyzer/Vanara.CodeGen.Analyzer.csproj
@@ -18,9 +18,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" />
   </ItemGroup>
-  <ItemGroup>
+  <!--<ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" OutputItemType="Analyzer" />
-  </ItemGroup>
+  </ItemGroup>-->
   <ItemGroup>
     <Compile Update="Resources.Designer.cs" DesignTime="True" AutoGen="True" DependentUpon="Resources.resx" />
     <EmbeddedResource Update="Resources.resx" Generator="ResXFileCodeGenerator" LastGenOutput="Resources.Designer.cs" />
