--- a/Core/Vanara.Core.csproj
+++ b/Core/Vanara.Core.csproj
@@ -16,7 +16,7 @@
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
     <AssemblyName>Vanara.Core</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
-    <PackageTags>vanara;net-extensions;interop</PackageTags>
+    <PackageTags>vanara;net-extensions;interop;pinvoke</PackageTags>
     <PackageReleaseNotes>Currently implements:
 
 Classes
@@ -36,6 +36,12 @@ ArrayLayout, Bitness, CorrespondingAction, FileAttributeConstant, FileOpConstant
   </ItemGroup>
   <ItemGroup Condition=" $(NETSTANDARD2_1) ">
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="InteropServices\SafeIDispatch.cs" />
@@ -68,6 +74,12 @@ ArrayLayout, Bitness, CorrespondingAction, FileAttributeConstant, FileOpConstant
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>SafeLPSTR.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup Condition="$(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('netcore'))">
+    <PackageReference Include="Microsoft.Win32.Registry" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Condition=" $(NET40_OR_GREATER) Or $(NETSTANDARD2_0) Or $(NETSTANDARD2_1) " />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
