Consolidated Vanara.PInvoke.Shared unit tests into those for Vanara.Core and removed Shared's unit test project

--- a/UnitTests/Core/Core.csproj
+++ b/UnitTests/Core/Core.csproj
@@ -7,10 +7,12 @@
   <ItemGroup>
     <None Include="InteropServices\StructMarshalerTests.cs" />
     <None Include="Marshaler\TestStructures.cs" />
+    <None Include="SampleAttributeTestCode.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="InteropServices\StructMarshalerTests.cs" />
     <Compile Remove="Marshaler\TestStructures.cs" />
+    <Compile Remove="SampleAttributeTestCode.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoFixture" />
