--- a/UnitTests/CodeGen/CodeGen.csproj
+++ b/UnitTests/CodeGen/CodeGen.csproj
@@ -1,11 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <AssemblyName>UnitTest.PInvoke.CodeGen</AssemblyName>
+    <ImplicitUsings>enable</ImplicitUsings>
     <!--<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>-->
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="PointerGenTests.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="..\..\Core\Attributes\CorrespondingTypeAttribute.cs" Link="Imports\CorrespondingTypeAttribute.cs" />
+    <Compile Include="..\..\Core\Extensions\EnumExtensions.cs" Link="Imports\EnumExtensions.cs" />
+    <Compile Include="..\..\Core\Marshaler\MarshaledAttribute.cs" Link="Imports\MarshaledAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="PointerGenTests.cs" />
@@ -31,8 +37,17 @@
     <None Update="handlesbad2.csv" CopyToOutputDirectory="PreserveNewest" />
     <None Update="handlesbad3.csv" CopyToOutputDirectory="PreserveNewest" />
     <None Update="handlesbad4.csv" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="Vanara.Core.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Update="Microsoft.NET.Test.Sdk" />
+  </ItemGroup>
+  <ItemGroup>
+    <Using Include="System.Runtime.InteropServices" />
+    <Using Include="System.Text" />
+    <Using Include="Vanara.Extensions" />
+    <Using Include="Vanara.InteropServices" />
   </ItemGroup>
 </Project>
