--- a/UnitTests/Directory.Build.props
+++ b/UnitTests/Directory.Build.props
@@ -8,10 +8,8 @@
     <Product>Vanara</Product>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-  <ItemGroup>
+  <ItemGroup Condition="!$(MSBuildProjectName.StartsWith('CodeGen'))">
     <Compile Include="$(MSBuildThisFileDirectory)..\AsmDef.cs" Link="AsmDef.cs" Condition="'$(MSBuildProjectExtension)' == '.csproj'"/>
-  </ItemGroup>
-  <ItemGroup Condition="'$(MSBuildProjectName)'!='Vanara.Core' And !$(MSBuildProjectName.StartsWith('Vanara.CodeGen'))">
     <ProjectReference Include="$(MSBuildThisFileDirectory)..\CodeGen\Generator\Vanara.CodeGen.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
     <ProjectReference Include="$(MSBuildThisFileDirectory)..\CodeGen\Analyzer\Vanara.CodeGen.Analyzer.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
     <ProjectReference Include="$(MSBuildThisFileDirectory)..\CodeGen\CodeFixes\Vanara.CodeGen.CodeFixes.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
