--- a/CodeGen/Generator/Vanara.CodeGen.csproj
+++ b/CodeGen/Generator/Vanara.CodeGen.csproj
@@ -18,11 +18,13 @@
     <Compile Remove="HandleTemplate.cs" />
     <Compile Remove="IUnkMethodGenerator.cs" />
     <Compile Remove="SafeHandleTemplate.cs" />
+    <Compile Remove="TypeDefSupportingTemplate.cs" />
     <Compile Remove="TypeDefTemplate.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="HandleTemplate.cs" />
     <EmbeddedResource Include="SafeHandleTemplate.cs" />
+    <EmbeddedResource Include="TypeDefSupportingTemplate.cs" />
     <EmbeddedResource Include="TypeDefTemplate.cs" />
   </ItemGroup>
   <ItemGroup>
