--- a/PInvoke/VssApi/Vanara.PInvoke.VssApi.nuspec
+++ b/PInvoke/VssApi/Vanara.PInvoke.VssApi.nuspec
@@ -4,7 +4,7 @@
     <id>Vanara.PInvoke.VssApi</id>
     <version>5.0.1</version>
     <description>PInvoke API (methods, structures and constants) imported from Windows Volume Shadow Copy Service (VssApi.dll).</description>
-    <copyright>Copyright © 2017-2025</copyright>
+    <copyright>Copyright © 2017-2026</copyright>
     <authors>David Hall</authors>
     <tags>pinvoke,vanara,net-extensions,interop,VSS,VssApi,volume shadow copy service</tags>
     <license type="expression">MIT</license>
@@ -23,6 +23,10 @@
   </metadata>
   <files>
     <file src="bin\Release\net8.0\Vanara.PInvoke.VssApi*.???" target="lib\net8.0-windows7.0" />
+    <file src="bin\Release\net8.0\Ijwhost.dll" target="lib\net8.0-windows7.0" />
+    <!--<file src="bin\Release\net8.0\Vanara.PInvoke.VssApiMgd.*" target="runtimes\win-x64\lib\net8.0-windows7.0" />
+    <file src="bin\Release\net8.0\Ijwhost.dll" target="runtimes\win-x64\lib\net8.0-windows7.0" />
+    <file src="Vanara.PInvoke.VssApi.targets" target="build" />-->
     <file src="..\..\docs\icons\Vanara64x64.png" target="Vanara64x64.png" />
     <file src="pkgreadme.md" target="pkgreadme.md" />
   </files>
